plugins/formal-verification/testData/diagnostics/no_contracts/operators/increment.kt
// NEVER_VALIDATE

fun <!VIPER_TEXT!>test_simple<!>() {
    var x = 10
    x += 5
    --x
    x -= 3
    ++x
    x *= 2
    x /= 4
}